--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--primary-color);
 }
 
 code {
-  font-family: "Roboto",source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: "Roboto", source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -29,7 +29,8 @@ code {
   outline: none;
 }
 
-h2, h1{
+h2,
+h1 {
   text-align: center;
 }
 
@@ -39,13 +40,13 @@ p {
   text-align: center;
 }
 
-.loader{
+.loader {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.intro-help{
+.intro-help {
   font-size: 12px;
 }
 
@@ -57,13 +58,13 @@ p {
   right: -50px;
   top: 40px;
   -webkit-transform: rotate(45deg);
-     -moz-transform: rotate(45deg);
-      -ms-transform: rotate(45deg);
-       -o-transform: rotate(45deg);
-          transform: rotate(45deg);
-	-webkit-box-shadow: 0 0 10px #888;
-     -moz-box-shadow: 0 0 10px #888;
-          box-shadow: 0 0 10px #888;
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+  -webkit-box-shadow: 0 0 10px #888;
+  -moz-box-shadow: 0 0 10px #888;
+  box-shadow: 0 0 10px #888;
 }
 .ribbon a {
   border: 1px solid #faa;
@@ -74,4 +75,12 @@ p {
   padding: 10px 50px;
   text-align: center;
   text-decoration: none;
+}
+:root {
+  --primary-color: #ffffff;
+  --secondary-color: #000000;
+}
+.dark-theme {
+  --primary-color: #000000;
+  --secondary-color: #ffffff;
 }
