--- a/src/App.css
+++ b/src/App.css
@@ -58,8 +58,56 @@
     width: 100%;
   }
 }
+.submit-button {
+  margin: 50px;
+  --glow-color: rgb(255, 122, 122);
+  --glow-spread-color: rgba(255, 162, 162, 0.781);
+  --enhanced-glow-color: rgb(255, 0, 0);
+  --btn-color: rgb(225, 49, 49);
+  border: 0.1em solid var(--glow-color);
+  padding: 1em 3em;
+  color: var(--secondary-color);
+  font-size: 15px;
+  font-weight: bold;
+  background-color: red;
+  border-radius: 1em;
+  outline: none;
+  /* box-shadow: 0 0 1em 0.25em var(--glow-color),
+    0 0 4em 1em var(--glow-spread-color),
+    inset 0 0 0.75em 0.25em var(--glow-color); */
+  /* text-shadow: 0 0 0.5em var(--glow-color); */
+  position: relative;
+  transition: all 0.3s;
+}
 
-.submit-btn {
+/* .submit-button::after {
+  pointer-events: none;
+  content: "";
+  position: absolute;
+  top: 120%;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: var(--glow-spread-color);
+  filter: blur(2em);
+  opacity: 0.7;
+  transform: perspective(1.5em) rotateX(35deg) scale(1, 0.6);
+} */
+
+.submit-button:hover {
+  /* color: var(--btn-color); */
+  background-color: var(--glow-color);
+  box-shadow: 0 0 1em 0.25em var(--glow-color),
+    0 0 4em 2em var(--glow-spread-color),
+    inset 0 0 0.75em 0.25em var(--glow-color);
+}
+
+.submit-button:active {
+  box-shadow: 0 0 0.6em 0.25em var(--glow-color),
+    0 0 2.5em 2em var(--glow-spread-color),
+    inset 0 0 0.5em 0.25em var(--glow-color);
+}
+/* .submit-btn {
   margin: 1rem;
   padding: 1rem 2rem;
   text-transform: uppercase;
@@ -80,7 +128,7 @@
   color: #ff0000;
   border: 1px solid #ff0000;
   transition: 0.3s ease;
-}
+} */
 
 .example-link {
   padding: 0.2rem;
